--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "worker": "node index.js", 
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
