--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "final prototype of sketcho_graduation project",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "socket.io": "^3.1.1"
   },
   "devDependencies": {},
   "scripts": {
-    "worker": "node index.js", 
-    "start": "node index.js",
+    "worker": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,5 +20,5 @@
     "application"
   ],
   "author": "yeun kim",
-  "license": "ISC"
+  "license": "MIT"
 }
