--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "express": "^4.17.1",
     "socket.io": "^3.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.12"
+  },
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,5 +22,4 @@
     "type": "git",
     "url": ""
   }
-
 }
