--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "nodemon": "^2.0.12"
   },
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "minkycho",
